instanciation du la classe VboxCalendrier et boutons de la classe VBoxRoot